tdf#104743: Export transparency for bitmap fill/background

Change-Id: I951ce974320f2eb5a6d3304b66f89ce71b38982c